# flatpak-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  rustfmt.toml
.github/workflows/: doc.yml  formatting.yml  rustfmt.yml  tests.yml
scripts/: generate_doc.sh  publish.sh
src/: application.rs  architecture.rs  archive.rs  build_system.rs  filename.rs  flatpak_manifest.rs  format.rs  lib.rs  manifest_type.rs  module.rs  reverse_dns.rs  source.rs  utils.rs
