[package]
name = "flatpak-rs"
authors = ["louib <code@louib.net>"]

repository = "https://github.com/louib/flatpak-rs"
description = "Flatpak library for Rust."

keywords = [
  "flatpak"
]

license = "MIT"
readme = "README.md"

version = "0.2.1"
edition = "2018"

include = [
  "src/",
  "README.md",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

regex = "1.5.4"

lazy_static = "1.4.0"
