[package]
name = "flatpak-rs"
authors = ["louib <code@louib.net>"]

repository = "https://github.com/louib/flatpak-rs"
description = "Flatpak library for Rust."

keywords = [
  "flatpak"
]

license = "MIT"
readme = "README.md"

version = "0.13.0"
edition = "2018"

include = [
  "src/",
  "README.md",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["toml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.4"
toml = { version = "0.5", optional = true }

regex = ">=1.5.5"

lazy_static = "1.4"
